Refactor: Remove Gradle, update DataSeeder password logic, config CORS